topbar and navbar gap fixed

--- a/src/styles/EventFeed.css
+++ b/src/styles/EventFeed.css
@@ -1,3 +1,10 @@
+:root {
+  --navbar-h: 54px;
+  --topbar-h: 41px;
+  --feed-top: calc(var(--navbar-h) + var(--topbar-h));
+}
+
+
 .event-feed {
   display: grid;
   grid-template-columns: 1fr;
